# -*- mode:toml; coding:utf-8-unix; -*-
# =============================================================================
[package]
name            = "slide_cast"
version         = "0.1.2-alpha.0"
authors         = ["hanepjiv <hanepjiv@gmail.com>"]
license         = "MIT/Apache-2.0"
keywords        = []
description     = ""
readme          = "README.md"
documentation   = ""
homepage        = ""
#repository     = "https://github.com/hanepjiv/slide_cast-rs.git"
# =============================================================================
[dependencies]
